--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -610,10 +610,6 @@ video {
   visibility: visible;
 }
 
-.invisible {
-  visibility: hidden;
-}
-
 .collapse {
   visibility: collapse;
 }
@@ -655,6 +651,10 @@ video {
   right: 0px;
 }
 
+.isolate {
+  isolation: isolate;
+}
+
 .z-10 {
   z-index: 10;
 }
@@ -665,6 +665,10 @@ video {
 
 .m-5 {
   margin: 1.25rem;
+}
+
+.m-3 {
+  margin: 0.75rem;
 }
 
 .mx-auto {
@@ -706,6 +710,10 @@ video {
 
 .mr-12 {
   margin-right: 3rem;
+}
+
+.mt-1 {
+  margin-top: 0.25rem;
 }
 
 .mt-10 {
@@ -750,6 +758,10 @@ video {
 
 .table {
   display: table;
+}
+
+.\!grid {
+  display: grid !important;
 }
 
 .grid {
@@ -798,16 +810,12 @@ video {
   height: 20rem;
 }
 
-.h-9 {
-  height: 2.25rem;
-}
-
 .h-\[170px\] {
   height: 170px;
 }
 
-.h-\[198px\] {
-  height: 198px;
+.h-\[195px\] {
+  height: 195px;
 }
 
 .h-\[270px\] {
@@ -834,26 +842,6 @@ video {
   height: 100vh;
 }
 
-.h-\[190px\] {
-  height: 190px;
-}
-
-.h-\[197px\] {
-  height: 197px;
-}
-
-.h-\[195px\] {
-  height: 195px;
-}
-
-.h-\[100px\] {
-  height: 100px;
-}
-
-.h-\[150px\] {
-  height: 150px;
-}
-
 .min-h-screen {
   min-height: 100vh;
 }
@@ -874,6 +862,10 @@ video {
   width: 3.5rem;
 }
 
+.w-2\/3 {
+  width: 66.666667%;
+}
+
 .w-4\/5 {
   width: 80%;
 }
@@ -892,6 +884,10 @@ video {
 
 .w-96 {
   width: 24rem;
+}
+
+.w-\[150px\] {
+  width: 150px;
 }
 
 .w-\[170px\] {
@@ -919,14 +915,6 @@ video {
   width: 75%;
 }
 
-.w-\[100px\] {
-  width: 100px;
-}
-
-.w-\[150px\] {
-  width: 150px;
-}
-
 .min-w-0 {
   min-width: 0px;
 }
@@ -945,10 +933,6 @@ video {
 
 .max-w-md {
   max-width: 28rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
 }
 
 .flex-1 {
@@ -987,53 +971,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.animate-pulse {
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-}
-
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.animate-spin {
-  animation: spin 1s linear infinite;
-}
-
-@keyframes ping {
-  75%, 100% {
-    transform: scale(2);
-    opacity: 0;
-  }
-}
-
-.animate-ping {
-  animation: ping 1s cubic-bezier(0, 0, 0.2, 1) infinite;
-}
-
-@keyframes bounce {
-  0%, 100% {
-    transform: translateY(-25%);
-    animation-timing-function: cubic-bezier(0.8,0,1,1);
-  }
-
-  50% {
-    transform: none;
-    animation-timing-function: cubic-bezier(0,0,0.2,1);
-  }
-}
-
-.animate-bounce {
-  animation: bounce 1s infinite;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -1046,8 +983,8 @@ video {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
+.items-end {
+  align-items: flex-end;
 }
 
 .items-center {
@@ -1084,6 +1021,14 @@ video {
 
 .gap-9 {
   gap: 2.25rem;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-16 {
+  gap: 4rem;
 }
 
 .space-y-1 > :not([hidden]) ~ :not([hidden]) {
@@ -1190,13 +1135,14 @@ video {
   border-width: 4px;
 }
 
-.border-b {
-  border-bottom-width: 1px;
-}
-
 .border-\[\#00FFFF\] {
   --tw-border-opacity: 1;
   border-color: rgb(0 255 255 / var(--tw-border-opacity));
+}
+
+.border-\[\#00ff88\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 255 136 / var(--tw-border-opacity));
 }
 
 .border-\[\#FF007A\] {
@@ -1229,34 +1175,13 @@ video {
   border-color: rgb(239 68 68 / var(--tw-border-opacity));
 }
 
-.border-red-800 {
-  --tw-border-opacity: 1;
-  border-color: rgb(153 27 27 / var(--tw-border-opacity));
-}
-
-.border-\[\#ff0055\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 0 85 / var(--tw-border-opacity));
-}
-
-.border-green-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(74 222 128 / var(--tw-border-opacity));
-}
-
-.border-green-700 {
-  --tw-border-opacity: 1;
-  border-color: rgb(21 128 61 / var(--tw-border-opacity));
-}
-
-.border-\[\#00ff88\] {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 255 136 / var(--tw-border-opacity));
-}
-
 .bg-\[\#00FFFF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(0 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#00ff88\]\/30 {
+  background-color: rgb(0 255 136 / 0.3);
 }
 
 .bg-black {
@@ -1299,9 +1224,8 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
-.bg-red-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(153 27 27 / var(--tw-bg-opacity));
+.bg-red-600\/30 {
+  background-color: rgb(220 38 38 / 0.3);
 }
 
 .bg-transparent {
@@ -1317,55 +1241,9 @@ video {
   background-color: rgb(255 255 255 / 0.05);
 }
 
-.bg-red-400 {
+.bg-purple-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity));
-}
-
-.bg-red-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 242 242 / var(--tw-bg-opacity));
-}
-
-.bg-red-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
-}
-
-.bg-red-200\/50 {
-  background-color: rgb(254 202 202 / 0.5);
-}
-
-.bg-red-500\/50 {
-  background-color: rgb(239 68 68 / 0.5);
-}
-
-.bg-red-500\/70 {
-  background-color: rgb(239 68 68 / 0.7);
-}
-
-.bg-red-600\/30 {
-  background-color: rgb(220 38 38 / 0.3);
-}
-
-.bg-red-900\/40 {
-  background-color: rgb(127 29 29 / 0.4);
-}
-
-.bg-\[\#ff0055\]\/40 {
-  background-color: rgb(255 0 85 / 0.4);
-}
-
-.bg-green-400\/30 {
-  background-color: rgb(74 222 128 / 0.3);
-}
-
-.bg-green-800\/40 {
-  background-color: rgb(22 101 52 / 0.4);
-}
-
-.bg-\[\#00ff88\]\/30 {
-  background-color: rgb(0 255 136 / 0.3);
+  background-color: rgb(107 33 168 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -1394,11 +1272,6 @@ video {
   background-repeat: no-repeat;
 }
 
-.object-cover {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
 .p-0 {
   padding: 0px;
 }
@@ -1413,10 +1286,6 @@ video {
 
 .p-2 {
   padding: 0.5rem;
-}
-
-.p-25 {
-  padding: 6.25rem;
 }
 
 .p-3 {
@@ -1506,24 +1375,12 @@ video {
   padding-top: 2rem;
 }
 
-.pl-25 {
-  padding-left: 6.25rem;
-}
-
-.pl-2 {
-  padding-left: 0.5rem;
-}
-
-.pl-10 {
-  padding-left: 2.5rem;
-}
-
-.pl-20 {
-  padding-left: 5rem;
-}
-
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-2xl {
@@ -1550,6 +1407,11 @@ video {
   font-size: 50px;
 }
 
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1563,11 +1425,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-7xl {
-  font-size: 4.5rem;
-  line-height: 1;
 }
 
 .font-bold {
@@ -1584,6 +1441,10 @@ video {
 
 .lowercase {
   text-transform: lowercase;
+}
+
+.italic {
+  font-style: italic;
 }
 
 .ordinal {
@@ -1626,30 +1487,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[black\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-\[\#\#FF007A\] {
-  color: ##FF007A;
-}
-
-.text-\[\#00ccff\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 204 255 / var(--tw-text-opacity));
-}
-
-.text-\[\#17c7c7\] {
-  --tw-text-opacity: 1;
-  color: rgb(23 199 199 / var(--tw-text-opacity));
-}
-
-.text-\[\#23ecec\] {
-  --tw-text-opacity: 1;
-  color: rgb(35 236 236 / var(--tw-text-opacity));
-}
-
 .underline {
   text-decoration-line: underline;
 }
@@ -1670,9 +1507,21 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-\[0_0_10px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\] {
+  --tw-shadow: 0 0 10px #00ff88,0 0 20px #00ff88,0 0 40px #00ff88;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-\[0_0_10px_\#FF007A\] {
   --tw-shadow: 0 0 10px #FF007A;
   --tw-shadow-colored: 0 0 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_0_10px_\#ff0000\2c 0_0_20px_\#ff0000\2c 0_0_40px_\#ff0000\] {
+  --tw-shadow: 0 0 10px #ff0000,0 0 20px #ff0000,0 0 40px #ff0000;
+  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1685,90 +1534,6 @@ video {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_rgba\(0\2c 0\2c 0\2c 1\)\2c 0_0_40px_rgba\(00\2c 0\2c 0\.9\)\2c 0_0_60px_rgba\(0\2c 0\2c 0\2c 0\.8\)\] {
-  --tw-shadow: 0 0 20px rgba(0,0,0,1),0 0 40px rgba(00,0,0.9),0 0 60px rgba(0,0,0,0.8);
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_15px_\#ff0000\2c 0_0_30px_\#ff0000\2c 0_0_60px_\#ff0000\] {
-  --tw-shadow: 0 0 15px #ff0000,0 0 30px #ff0000,0 0 60px #ff0000;
-  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#8b0000\2c 0_0_25px_\#8b0000\] {
-  --tw-shadow: 0 0 10px #8b0000,0 0 25px #8b0000;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 25px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_\#ff0055\2c 0_0_40px_\#ff0055\2c 0_0_60px_\#ff0055\] {
-  --tw-shadow: 0 0 20px #ff0055,0 0 40px #ff0055,0 0 60px #ff0055;
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_15px_\#00ff88\2c 0_0_30px_\#00ff88\2c 0_0_60px_\#00ff88\] {
-  --tw-shadow: 0 0 15px #00ff88,0 0 30px #00ff88,0 0 60px #00ff88;
-  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#006400\2c 0_0_20px_\#006400\] {
-  --tw-shadow: 0 0 10px #006400,0 0 20px #006400;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\2c 0_0_60px_\#00ff88\] {
-  --tw-shadow: 0 0 20px #00ff88,0 0 40px #00ff88,0 0 60px #00ff88;
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_60px_\#00ff88\] {
-  --tw-shadow: 0 0 20px #00ff88,0 0 20px #00ff88,0 0 60px #00ff88;
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_\#00ff88\2c 0_0_10px_\#00ff88\2c 0_0_60px_\#00ff88\] {
-  --tw-shadow: 0 0 20px #00ff88,0 0 10px #00ff88,0 0 60px #00ff88;
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 10px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_20px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\] {
-  --tw-shadow: 0 0 20px #00ff88,0 0 20px #00ff88,0 0 40px #00ff88;
-  --tw-shadow-colored: 0 0 20px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#00ff88\2c 0_0_20px_\#00ff88\2c 0_0_40px_\#00ff88\] {
-  --tw-shadow: 0 0 10px #00ff88,0 0 20px #00ff88,0 0 40px #00ff88;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#ff0000\2c 0_0_30px_\#ff0000\2c 0_0_60px_\#ff0000\] {
-  --tw-shadow: 0 0 10px #ff0000,0 0 30px #ff0000,0 0 60px #ff0000;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#ff0000\2c 0_0_20px_\#ff0000\2c 0_0_60px_\#ff0000\] {
-  --tw-shadow: 0 0 10px #ff0000,0 0 20px #ff0000,0 0 60px #ff0000;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 60px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[0_0_10px_\#ff0000\2c 0_0_20px_\#ff0000\2c 0_0_40px_\#ff0000\] {
-  --tw-shadow: 0 0 10px #ff0000,0 0 20px #ff0000,0 0 40px #ff0000;
-  --tw-shadow-colored: 0 0 10px var(--tw-shadow-color), 0 0 20px var(--tw-shadow-color), 0 0 40px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1799,10 +1564,6 @@ video {
 .invert {
   --tw-invert: invert(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.\!filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow) !important;
 }
 
 .filter {
@@ -1839,10 +1600,8 @@ video {
   transition-duration: 200ms;
 }
 
-.hover\:scale-\[1\.01\]:hover {
-  --tw-scale-x: 1.01;
-  --tw-scale-y: 1.01;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+.\[a-zA-Z0-9\:\\\\-\\\\\._\$\] {
+  a-z-a--z0-9: \\-\\. $;
 }
 
 .hover\:bg-gray-300:hover {
@@ -1863,12 +1622,6 @@ video {
 .hover\:bg-red-600:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
-.hover\:shadow-\[0_0_15px_\#ff0000\2c 0_0_30px_\#ff0000\]:hover {
-  --tw-shadow: 0 0 15px #ff0000,0 0 30px #ff0000;
-  --tw-shadow-colored: 0 0 15px var(--tw-shadow-color), 0 0 30px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .hover\:brightness-125:hover {
